Add option to use rclone move

--- a/sprinkle.conf
+++ b/sprinkle.conf
@@ -42,6 +42,11 @@
 # dry_run: dry run mode
 # dry_run=false
 
+# rclone_move: move files instead of copying them
+# rclone_move=false (copy files and keep sources) (default)
+# rclone_move=true (remove source files after transfer)
+# rclone_move=false
+
 # delete_files: delete files after 1-way sync
 # delete_files=false (leave files not locally present on remote drives)
 # delete_files=true (delete files not locally present from remote drives) (default)
