--- a/sprinkle.conf
+++ b/sprinkle.conf
@@ -44,13 +44,14 @@
 
 # rclone_move: move files instead of copying them
 # rclone_move=false (copy files and keep sources) (default)
-# rclone_move=true (remove source files after transfer)
 # rclone_move=false
+rclone_move=true
+
 
 # delete_files: delete files after 1-way sync
 # delete_files=false (leave files not locally present on remote drives)
 # delete_files=true (delete files not locally present from remote drives) (default)
-# delete_files=true
+delete_files=false
 
 # restore_duplicates: restore if duplicates are found
 # restore_duplicates=false (run duplicate check and fail restore if a duplicate file is found) (default)
